# 7kaa

./: .gitignore  7KAA-2.4.14-VS2010.sln  ALL.H  AM.CPP  AM.cpp  COLOR.H  COPYING  CRC.H  IB_A.ASM  IB_AR.ASM  IB_AT.ASM  IB_ATM.ASM  IB_ATRD.ASM  IB_ATRDM.ASM  IB_DW.ASM  IB_TD.ASM  IB_TDM.ASM  IB_TM1.ASM  IB_TM2.ASM  IB_TM3.ASM  IB_TR.ASM  IJ_T.ASM  IR_A.ASM  IR_BAR.ASM  IR_M.ASM  I_BLACK.ASM  I_PIXEL.ASM  I_XOR.ASM  KEY.H  Makefile.am  OAI_ACT.CPP  OAI_ACT.cpp  OAI_ACT2.cpp  OAI_ATTK.cpp  OAI_BUIL.cpp  OAI_CAP2.cpp  OAI_CAPT.cpp  OAI_DEFE.CPP  OAI_DEFE.cpp  OAI_DIPL.cpp  (+464 more)
data/: Makefile.am  config.ini
data/IMAGE/: CHINESE.COL  CHINESE.ICN  CREDITS2.ICN  CREDITS3.COL  CREDITS3.ICN  CREDITS6.COL  CREDITS6.ICN  EGYPTIAN.COL  GREEK.COL  HALLFAME.ICN  INDIAN.ICN  LOSEGAME.COL  MAINMENU.COL  MAYA.COL  NORMAN.COL  NORMAN.ICN  PERSIAN.COL  PERSIAN.ICN  RESULTS.ICN  VIKING.COL  VIKING.ICN
data/RESOURCE/: A_WAVE1.RES  FNT_CASA_88592.RES  FNT_CASA_88593.RES  FNT_CASA_88595.RES  FNT_HITP.RES  FNT_MID_88592.RES  FNT_MID_88593.RES  FNT_MID_88595.RES  FNT_NEWS.RES  FNT_NEWS_88592.RES  FNT_NEWS_88593.RES  FNT_NEWS_88595.RES  FNT_SAN.RES  FNT_SAN_88592.RES  FNT_SAN_88593.RES  FNT_SAN_88595.RES  FNT_SMAL.RES  FNT_SMAL_88592.RES  FNT_SMAL_88593.RES  FNT_STD.RES  FNT_STD_88592.RES  FNT_STD_88593.RES  FNT_STD_88595.RES  HELP.RES  HILL2.RES  HILL3.RES  I_BUTTON.RES  I_CURSOR.RES  I_ENCYC.RES  I_HILL1.RES  I_ICON.RES  I_MENU2.RES  I_RACE.RES  I_RAW.RES  I_SNOW.RES  I_TECH.RES  I_TERA2.RES  I_TOWN.RES  I_TPICT1.RES  I_TPICT2.RES  (+27 more)
data/SCENARI2/: SCN_01.SCN  SCN_02.SCN  SCN_02.SCP  SCN_03.SCP  SCN_03.SCT  SCN_04.SCN  SCN_04.SCP  SCN_04.SCT  SCN_06.SCN  SCN_06.SCP  SCN_07.SCN  SCN_07.SCT  SCN_09.SCN  SCN_09.SCT  SCN_10.SCN  SCN_10.SCT  SCN_11.SCP  SCN_11.SCT  SCN_12.SCP  SCN_13.SCN  SCN_13.SCT  SCN_14.SCP  SCN_14.SCT  SCN_15.SCN  SCN_15.SCT
data/SCENARIO/: 7FOR7.SCP  7FOR7.SCT  C&D.SCN  C&D.SCP  C&D.SCT  DESBOW.SCN  DESBOW.SCP  DESBOW.SCT  DESPERDO.SCN  DESPERDO.SCP  DESPERDO.SCT  ERADICAT.SCP  FTFRAUTN.SCN  FTFRAUTN.SCP  FTFRAUTN.SCT  H&M.SCP  INSULPOS.SCN  INSULPOS.SCP  INSULPOS.SCT  IRONFIST.SCN  IRONFIST.SCT  MAKEBREK.SCN  MAKEBREK.SCT  MELTPOT.SCN  MONORWAR.SCP  MONORWAR.SCT  NEWWORLD.SCN  NORMAN.SCP  NOTLOST.SCN  PIRATES.SCN  PIRATES.SCP  PIRATES.SCT  PRNCTKAO.SCT  QUESUCCN.SCP  RESDEP.SCN  RESDEP.SCP  TREADCAR.SCN  TREADCAR.SCT  VIKBLITZ.SCT  WEAKENED.SCN  (+1 more)
data/SPRITE/: BALLISTA.SPR  CANBALLA.SPR  CANSMOKE.SPR  CATAPULT.SPR  CATFIRE.SPR  CATSTONA.SPR  CATSTONE.SPR  CATSTONS.SPR  CHDRAGON.SPR  CHINESE.SPR  CH_ARROW.SPR  EGYPTIAN.SPR  EG_ARROW.SPR  EG_GOD.SPR  EG_POWAR.SPR  EXPCART.SPR  FB_ARROW.SPR  FCATAPUL.SPR  FIREKIN.SPR  GALLEON.SPR  GE_STAR.SPR  GIANTET.SPR  GITH.SPR  GI_STAR.SPR  GJ_STAR.SPR  GNOLL.SPR  GOBLIN.SPR  GREMJERM.SPR  HEADLESS.SPR  HITSPARK.SPR  IN_GOD.SPR  JA_GOD.SPR  JA_POWER.SPR  KUKULCAN.SPR  MAN.SPR  MAYA.SPR  PERSIAN.SPR  TC_ARR01.SPR  TC_ARRS0.SPR  TC_ARRS1.SPR  (+8 more)
data/TUTORIAL/: 10CAPTUR.TUT  1BAS_MIL.TUT  2B_TRADE.TUT  5BAS_NAV.TUT  7MERCENA.TUT  9SEATPOW.TUT  LOYALTY.TUT
data/image/: credits1.col  credits1.icn  credits2.col  credits4.col  credits4.icn  egyptian.icn  greek.icn  hallfame.col  indian.col  japanese.col  japanese.icn  losegame.icn  mainmenu.icn  maya.icn  results.col  zulu.col  zulu.icn
data/resource/: a_wave2.res  cursor.res  fnt_bard.res  fnt_casa.res  fnt_mid.res  fnt_news_88595.res  fnt_san_88595.res  fnt_smal_88595.res  help.res  hill1.res  i_button.res  i_cursor.res  i_firm.res  i_firmdi.res  i_hill2.res  i_hill3.res  i_if.res  i_plant1.res  i_plant2.res  i_plant3.res  i_rock1.res  i_rock2.res  i_rock3.res  i_spict.res  i_tera1.res  i_tera3.res  i_tern1.res  i_tern2.res  i_tern3.res  i_unitgi.res  i_unitui.res  locale.res  pal_menu.res  plant1.res  plant2.res  plant3.res  plantbm1.res  plantbm2.res  rock1.res  rock3.res  (+9 more)
data/scenari2/: scn_01.scp  scn_01.sct  scn_02.sct  scn_03.scn  scn_03.sct  scn_04.sct  scn_05.scn  scn_05.scp  scn_05.sct  scn_06.sct  scn_07.scp  scn_07.sct  scn_08.scn  scn_08.scp  scn_08.sct  scn_09.scp  scn_09.sct  scn_10.scp  scn_10.sct  scn_11.scn  scn_11.sct  scn_12.scn  scn_12.sct  scn_13.scp  scn_13.sct  scn_14.scn  scn_14.sct  scn_15.scp  scn_15.sct
data/scenario/: 7for7.scn  7for7.sct  c&d.sct  desbow.sct  desperdo.sct  eradicat.scn  eradicat.sct  ftfrautn.sct  h&m.scn  h&m.sct  insulpos.sct  ironfist.scp  ironfist.sct  kukulcns.scn  kukulcns.scp  kukulcns.sct  makebrek.scp  makebrek.sct  meltpot.scp  meltpot.sct  monorwar.scn  monorwar.sct  newworld.scp  newworld.sct  norman.scn  norman.sct  notlost.scp  notlost.sct  pirates.sct  prnctkao.scn  prnctkao.scp  prnctkao.sct  quesuccn.scn  quesuccn.sct  resdep.sct  treadcar.scp  treadcar.sct  vikblitz.scn  vikblitz.scp  vikblitz.sct  (+2 more)
data/sprite/: baatezu.spr  canball.spr  canballs.spr  cannon.spr  caravan.spr  carave_s.spr  caravel.spr  catfirea.spr  dr_arrow.spr  dragon.spr  f_ballis.spr  fb_arrs0.spr  fl_arrow.spr  flamethr.spr  fpersian.spr  galleo_s.spr  gc_arrow.spr  gp_star.spr  greek.spr  gz_star.spr  hitspar2.spr  hobglob.spr  indian.spr  japanese.spr  lizard.spr  lyw.spr  moldman.spr  norman.spr  (+17 more)
include/: ALL.h  COLCODE.h  COLOR.h  CRC.h  CmdLine.h  ConfigAdv.h  DMOUSE.h  FilePath.h  FileSystem.h  GAMEDEF.h  IMGFUN.h  KEY.h  LocaleRes.h  MPTYPES.h  Makefile.am  OANLINE.h  OAUDIO.h  OBATTLE.h  OBLOB.h  OBOX.h  OBULLET.h  OBUTT3D.h  OBUTTCUS.h  OBUTTON.h  OB_FLAME.h  OB_HOMIN.h  OB_PROJ.h  OCOLTBL.h  OCONFIG.h  OCRC_STO.h  ODATE.h  ODB.h  ODIR.h  ODPLAY.h  ODYNARR.h  ODYNARRB.h  OEFFECT.h  OERRCTRL.h  OERROR.h  OEXPMASK.h  (+193 more)
src/: AM.cpp  CmdLine.cpp  ConfigAdv.cpp  FileSystem.cpp  INIReader.cpp  LocaleRes.cpp  Makefile.am  OAI_ACT.cpp  OAI_ACT2.cpp  OAI_ATTK.cpp  OAI_BUIL.cpp  OAI_CAP2.cpp  OAI_CAPT.cpp  OAI_DEFE.cpp  OAI_DIPL.cpp  OAI_ECO.cpp  OAI_GRAN.cpp  OAI_MAIN.cpp  OAI_MAR2.cpp  OAI_MAR3.cpp  OAI_MARI.cpp  OAI_MILI.cpp  OAI_QUER.cpp  OAI_SEEK.cpp  OAI_SPY.cpp  OAI_TALK.cpp  OAI_TOWN.cpp  OAI_UNIT.cpp  OBATTLE.cpp  OBOX.cpp  OBULLET.cpp  OBULLETA.cpp  OBUTT3D.cpp  OBUTTCUS.cpp  OBUTTON.cpp  OB_HOMIN.cpp  OCOLTBL.cpp  OCONFIG.cpp  OCRC_STO.cpp  ODATE.cpp  (+228 more)
(+942 files in other folders)
