resdatadir = $(datadir)/7kaa
nobase_dist_resdata_DATA = \
	encyc/firm/factory.col \
	encyc/firm/factory.icn \
	encyc/firm/fort.col \
	encyc/firm/fort.icn \
	encyc/firm/harbor.col \
	encyc/firm/harbor.icn \
	encyc/firm/inn.col \
	encyc/firm/inn.icn \
	encyc/firm/market.col \
	encyc/firm/market.icn \
	encyc/firm/mine.col \
	encyc/firm/mine.icn \
	encyc/firm/science.col \
	encyc/firm/science.icn \
	encyc/firm/warfact.col \
	encyc/firm/warfact.icn \
	encyc/god/chinese.col \
	encyc/god/chinese.icn \
	encyc/god/greek.col \
	encyc/god/greek.icn \
	encyc/god/japanese.col \
	encyc/god/japanese.icn \
	encyc/god/maya.col \
	encyc/god/maya.icn \
	encyc/god/norman.col \
	encyc/god/norman.icn \
	encyc/god/persian.col \
	encyc/god/persian.icn \
	encyc/god/viking.col \
	encyc/god/viking.icn \
	encyc/monster/firekin.col \
	encyc/monster/firekin.icn \
	encyc/monster/giantet.col \
	encyc/monster/giantet.icn \
	encyc/monster/gith.col \
	encyc/monster/gith.icn \
	encyc/monster/gnoll.col \
	encyc/monster/gnoll.icn \
	encyc/monster/goblin.col \
	encyc/monster/goblin.icn \
	encyc/monster/gremjerm.col \
	encyc/monster/gremjerm.icn \
	encyc/monster/headless.col \
	encyc/monster/headless.icn \
	encyc/monster/hobglob.col \
	encyc/monster/hobglob.icn \
	encyc/monster/lizard.col \
	encyc/monster/lizard.icn \
	encyc/monster/lyw.col \
	encyc/monster/lyw.icn \
	encyc/monster/man.col \
	encyc/monster/man.icn \
	encyc/monster/rockman.col \
	encyc/monster/rockman.icn \
	encyc/monster/skeleton.col \
	encyc/monster/skeleton.icn \
	encyc/monster/struct_1.col \
	encyc/monster/struct_1.icn \
	encyc/monster/struct_2.col \
	encyc/monster/struct_2.icn \
	encyc/monster/struct_3.col \
	encyc/monster/struct_3.icn \
	encyc/monster/struct_4.col \
	encyc/monster/struct_4.icn \
	encyc/seat/chinese.col \
	encyc/seat/chinese.icn \
	encyc/seat/greek.col \
	encyc/seat/greek.icn \
	encyc/seat/japanese.col \
	encyc/seat/japanese.icn \
	encyc/seat/maya.col \
	encyc/seat/maya.icn \
	encyc/seat/norman.col \
	encyc/seat/norman.icn \
	encyc/seat/persian.col \
	encyc/seat/persian.icn \
	encyc/seat/viking.col \
	encyc/seat/viking.icn \
	encyc/unit/ballista.col \
	encyc/unit/ballista.icn \
	encyc/unit/cannon.col \
	encyc/unit/cannon.icn \
	encyc/unit/caravel.col \
	encyc/unit/caravel.icn \
	encyc/unit/catapult.col \
	encyc/unit/catapult.icn \
	encyc/unit/chinese.col \
	encyc/unit/chinese.icn \
	encyc/unit/expcart.col \
	encyc/unit/expcart.icn \
	encyc/unit/flamethr.col \
	encyc/unit/flamethr.icn \
	encyc/unit/galleon.col \
	encyc/unit/galleon.icn \
	encyc/unit/greek.col \
	encyc/unit/greek.icn \
	encyc/unit/japanese.col \
	encyc/unit/japanese.icn \
	encyc/unit/maya.col \
	encyc/unit/maya.icn \
	encyc/unit/norman.col \
	encyc/unit/norman.icn \
	encyc/unit/persian.col \
	encyc/unit/persian.icn \
	encyc/unit/transpor.col \
	encyc/unit/transpor.icn \
	encyc/unit/vessel.col \
	encyc/unit/vessel.icn \
	encyc/unit/viking.col \
	encyc/unit/viking.icn \
	encyc2/god/egyptian.col \
	encyc2/god/egyptian.icn \
	encyc2/god/indian.col \
	encyc2/god/indian.icn \
	encyc2/god/zulu.col \
	encyc2/god/zulu.icn \
	encyc2/seat/egyptian.col \
	encyc2/seat/egyptian.icn \
	encyc2/seat/indian.col \
	encyc2/seat/indian.icn \
	encyc2/seat/zulu.col \
	encyc2/seat/zulu.icn \
	encyc2/unit/egyptian.col \
	encyc2/unit/egyptian.icn \
	encyc2/unit/f_ballis.col \
	encyc2/unit/f_ballis.icn \
	encyc2/unit/indian.col \
	encyc2/unit/indian.icn \
	encyc2/unit/zulu.col \
	encyc2/unit/zulu.icn \
	image/7k_icon.bmp \
	image/chinese.col \
	image/chinese.icn \
	image/credits1.col \
	image/credits1.icn \
	image/credits2.col \
	image/credits2.icn \
	image/credits3.col \
	image/credits3.icn \
	image/credits4.col \
	image/credits4.icn \
	image/egyptian.col \
	image/egyptian.icn \
	image/greek.col \
	image/greek.icn \
	image/hallfame.col \
	image/hallfame.icn \
	image/indian.col \
	image/indian.icn \
	image/japanese.col \
	image/japanese.icn \
	image/losegame.col \
	image/losegame.icn \
	image/mainmenu.col \
	image/mainmenu.icn \
	image/maya.col \
	image/maya.icn \
	image/norman.col \
	image/norman.icn \
	image/persian.col \
	image/persian.icn \
	image/results.col \
	image/results.icn \
	image/viking.col \
	image/viking.icn \
	image/zulu.col \
	image/zulu.icn \
	resource/a_wave1.res \
	resource/a_wave2.res \
	resource/cursor.res \
	resource/explmask.bin \
	resource/expremap.bin \
	resource/fnt_bard.res \
	resource/fnt_casa.res \
	resource/fnt_hitp.res \
	resource/fnt_mid.res \
	resource/fnt_news.res \
	resource/fnt_san.res \
	resource/fnt_smal.res \
	resource/fnt_std.res \
	resource/help.res \
	resource/hill1.res \
	resource/hill2.res \
	resource/hill3.res \
	resource/i_button.res \
	resource/i_cursor.res \
	resource/i_encyc.res \
	resource/i_firm.res \
	resource/i_firmdi.res \
	resource/i_hill1.res \
	resource/i_hill2.res \
	resource/i_hill3.res \
	resource/i_icon.res \
	resource/i_if.res \
	resource/i_menu.res \
	resource/i_menu2.res \
	resource/i_plant1.res \
	resource/i_plant2.res \
	resource/i_plant3.res \
	resource/i_race.res \
	resource/i_raw.res \
	resource/i_rock1.res \
	resource/i_rock2.res \
	resource/i_rock3.res \
	resource/i_snow.res \
	resource/i_spict.res \
	resource/i_tech.res \
	resource/i_tera1.res \
	resource/i_tera2.res \
	resource/i_tera3.res \
	resource/i_tern1.res \
	resource/i_tern2.res \
	resource/i_tern3.res \
	resource/i_town.res \
	resource/i_tpict1.res \
	resource/i_tpict2.res \
	resource/i_tpict3.res \
	resource/i_unitgi.res \
	resource/i_unitki.res \
	resource/i_unitli.res \
	resource/i_unitsi.res \
	resource/i_unitti.res \
	resource/i_unitui.res \
	resource/i_wall.res \
	resource/pal_enc.res \
	resource/pal_menu.res \
	resource/pal_std.res \
	resource/pal_win.res \
	resource/plant1.res \
	resource/plant2.res \
	resource/plant3.res \
	resource/plantbm1.res \
	resource/plantbm2.res \
	resource/plantbm3.res \
	resource/rock1.res \
	resource/rock2.res \
	resource/rock3.res \
	resource/rockani1.res \
	resource/rockani2.res \
	resource/rockani3.res \
	resource/rockblk1.res \
	resource/rockblk2.res \
	resource/rockblk3.res \
	resource/rockbmp1.res \
	resource/rockbmp2.res \
	resource/rockbmp3.res \
	resource/std.set \
	resource/teranm1.res \
	resource/teranm2.res \
	resource/teranm3.res \
	resource/terrain1.res \
	resource/terrain2.res \
	resource/terrain3.res \
	resource/tersub.res \
	resource/tut_intr.res \
	resource/tut_list.res \
	resource/tut_list.txt \
	resource/tut_pict.res \
	resource/tut_text.res \
	scenari2/scn_01.scn \
	scenari2/scn_01.scp \
	scenari2/scn_01.sct \
	scenari2/scn_02.scn \
	scenari2/scn_02.scp \
	scenari2/scn_02.sct \
	scenari2/scn_03.scn \
	scenari2/scn_03.scp \
	scenari2/scn_03.sct \
	scenari2/scn_04.scn \
	scenari2/scn_04.scp \
	scenari2/scn_04.sct \
	scenari2/scn_05.scn \
	scenari2/scn_05.scp \
	scenari2/scn_05.sct \
	scenari2/scn_06.scn \
	scenari2/scn_06.scp \
	scenari2/scn_06.sct \
	scenari2/scn_07.scn \
	scenari2/scn_07.scp \
	scenari2/scn_07.sct \
	scenari2/scn_08.scn \
	scenari2/scn_08.scp \
	scenari2/scn_08.sct \
	scenari2/scn_09.scn \
	scenari2/scn_09.scp \
	scenari2/scn_09.sct \
	scenari2/scn_10.scn \
	scenari2/scn_10.scp \
	scenari2/scn_10.sct \
	scenari2/scn_11.scn \
	scenari2/scn_11.scp \
	scenari2/scn_11.sct \
	scenari2/scn_12.scn \
	scenari2/scn_12.scp \
	scenari2/scn_12.sct \
	scenari2/scn_13.scn \
	scenari2/scn_13.scp \
	scenari2/scn_13.sct \
	scenari2/scn_14.scn \
	scenari2/scn_14.scp \
	scenari2/scn_14.sct \
	scenari2/scn_15.scn \
	scenari2/scn_15.scp \
	scenari2/scn_15.sct \
	scenario/7for7.scn \
	scenario/7for7.scp \
	scenario/7for7.sct \
	scenario/c&d.scn \
	scenario/c&d.scp \
	scenario/c&d.sct \
	scenario/desbow.scn \
	scenario/desbow.scp \
	scenario/desbow.sct \
	scenario/desperdo.scn \
	scenario/desperdo.scp \
	scenario/desperdo.sct \
	scenario/eradicat.scn \
	scenario/eradicat.scp \
	scenario/eradicat.sct \
	scenario/ftfrautn.scn \
	scenario/ftfrautn.scp \
	scenario/ftfrautn.sct \
	scenario/h&m.scn \
	scenario/h&m.scp \
	scenario/h&m.sct \
	scenario/insulpos.scn \
	scenario/insulpos.scp \
	scenario/insulpos.sct \
	scenario/ironfist.scn \
	scenario/ironfist.scp \
	scenario/ironfist.sct \
	scenario/kukulcns.scn \
	scenario/kukulcns.scp \
	scenario/kukulcns.sct \
	scenario/makebrek.scn \
	scenario/makebrek.scp \
	scenario/makebrek.sct \
	scenario/meltpot.scn \
	scenario/meltpot.scp \
	scenario/meltpot.sct \
	scenario/monorwar.scn \
	scenario/monorwar.scp \
	scenario/monorwar.sct \
	scenario/newworld.scn \
	scenario/newworld.scp \
	scenario/newworld.sct \
	scenario/norman.scn \
	scenario/norman.scp \
	scenario/norman.sct \
	scenario/notlost.scn \
	scenario/notlost.scp \
	scenario/notlost.sct \
	scenario/pirates.scn \
	scenario/pirates.scp \
	scenario/pirates.sct \
	scenario/prnctkao.scn \
	scenario/prnctkao.scp \
	scenario/prnctkao.sct \
	scenario/quesuccn.scn \
	scenario/quesuccn.scp \
	scenario/quesuccn.sct \
	scenario/resdep.scn \
	scenario/resdep.scp \
	scenario/resdep.sct \
	scenario/treadcar.scn \
	scenario/treadcar.scp \
	scenario/treadcar.sct \
	scenario/vikblitz.scn \
	scenario/vikblitz.scp \
	scenario/vikblitz.sct \
	scenario/weakened.scn \
	scenario/weakened.scp \
	scenario/weakened.sct \
	sound/fire.wav \
	sound/quake.wav \
	sound/rain.wav \
	sound/thunder.wav \
	sound/wind.wav \
	sprite/baatezu.spr \
	sprite/ballista.spr \
	sprite/canball.spr \
	sprite/canballa.spr \
	sprite/canballs.spr \
	sprite/cannon.spr \
	sprite/cansmoke.spr \
	sprite/caravan.spr \
	sprite/carave_s.spr \
	sprite/caravel.spr \
	sprite/catapult.spr \
	sprite/catfire.spr \
	sprite/catfirea.spr \
	sprite/catfires.spr \
	sprite/catstona.spr \
	sprite/catstone.spr \
	sprite/catstons.spr \
	sprite/ch_arrow.spr \
	sprite/chdragon.spr \
	sprite/chinese.spr \
	sprite/dr_arrow.spr \
	sprite/dragon.spr \
	sprite/eg_arrow.spr \
	sprite/eg_god.spr \
	sprite/eg_powar.spr \
	sprite/egyptian.spr \
	sprite/expcart.spr \
	sprite/f_ballis.spr \
	sprite/fb_arra0.spr \
	sprite/fb_arrow.spr \
	sprite/fb_arrs0.spr \
	sprite/fcatapul.spr \
	sprite/firekin.spr \
	sprite/fl_arrow.spr \
	sprite/flamethr.spr \
	sprite/fpersian.spr \
	sprite/galleo_s.spr \
	sprite/galleon.spr \
	sprite/gc_arrow.spr \
	sprite/ge_star.spr \
	sprite/gi_star.spr \
	sprite/giantet.spr \
	sprite/gith.spr \
	sprite/gj_star.spr \
	sprite/gnoll.spr \
	sprite/goblin.spr \
	sprite/gp_star.spr \
	sprite/greek.spr \
	sprite/gremjerm.spr \
	sprite/gz_star.spr \
	sprite/headless.spr \
	sprite/hitspar2.spr \
	sprite/hitspark.spr \
	sprite/hobglob.spr \
	sprite/in_god.spr \
	sprite/indian.spr \
	sprite/ja_god.spr \
	sprite/ja_power.spr \
	sprite/japanese.spr \
	sprite/kukulcan.spr \
	sprite/lizard.spr \
	sprite/lyw.spr \
	sprite/man.spr \
	sprite/maya.spr \
	sprite/moldman.spr \
	sprite/no_arrow.spr \
	sprite/norman.spr \
	sprite/pe_arrow.spr \
	sprite/pe_powar.spr \
	sprite/pehealer.spr \
	sprite/persian.spr \
	sprite/pheonix.spr \
	sprite/rm_arrow.spr \
	sprite/rockman.spr \
	sprite/skeleton.spr \
	sprite/steam.spr \
	sprite/tc_arr00.spr \
	sprite/tc_arr01.spr \
	sprite/tc_arr02.spr \
	sprite/tc_arra0.spr \
	sprite/tc_arra1.spr \
	sprite/tc_arra2.spr \
	sprite/tc_arrs0.spr \
	sprite/tc_arrs1.spr \
	sprite/tc_arrs2.spr \
	sprite/tornado.spr \
	sprite/transp_s.spr \
	sprite/transpor.spr \
	sprite/v_arrow.spr \
	sprite/v_splash.spr \
	sprite/vessel.spr \
	sprite/vessel_s.spr \
	sprite/vi_god.spr \
	sprite/viking.spr \
	sprite/zu_arrow.spr \
	sprite/zu_god.spr \
	sprite/zulu.spr \
	tutorial/10captur.int \
	tutorial/10captur.tut \
	tutorial/10captur.txt \
	tutorial/1bas_mil.int \
	tutorial/1bas_mil.tut \
	tutorial/1bas_mil.txt \
	tutorial/2b_trade.int \
	tutorial/2b_trade.tut \
	tutorial/2b_trade.txt \
	tutorial/2bas_eco.int \
	tutorial/2bas_eco.tut \
	tutorial/2bas_eco.txt \
	tutorial/3researc.int \
	tutorial/3researc.tut \
	tutorial/3researc.txt \
	tutorial/4weapons.int \
	tutorial/4weapons.tut \
	tutorial/4weapons.txt \
	tutorial/5bas_nav.int \
	tutorial/5bas_nav.tut \
	tutorial/5bas_nav.txt \
	tutorial/6seatrad.int \
	tutorial/6seatrad.tut \
	tutorial/6seatrad.txt \
	tutorial/7mercena.int \
	tutorial/7mercena.tut \
	tutorial/7mercena.txt \
	tutorial/8fryhtan.int \
	tutorial/8fryhtan.tut \
	tutorial/8fryhtan.txt \
	tutorial/9seatpow.int \
	tutorial/9seatpow.tut \
	tutorial/9seatpow.txt \
	tutorial/loyalty.int \
	tutorial/loyalty.tut \
	tutorial/loyalty.txt \
	tutorial/spying.int \
	tutorial/spying.tut \
	tutorial/spying.txt
